CmfScaffoldApiController - getDataGridItems() fixed DbExpr usage in ORDER BY, now it appends, not replaces; cmf.app.less/css and cmf::scaffold.item_details view - item details table cells now wrap words to avoid overflows

--- a/src/PeskyCMF/public/less/cmf.app.less
+++ b/src/PeskyCMF/public/less/cmf.app.less
@@ -901,3 +901,10 @@ aside.main-sidebar {
 
     }
 }
+
+.item-details-table {
+    td {
+        word-break: break-all;
+        word-wrap: break-word;
+    }
+}
